--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Apex Gaming</title>
     <link rel="stylesheet" href="styles.css">
-    <iframe class="leaderboard" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTEFovYGHVQo9JNMLeX6ToaHihOoDzzH4VZ_tDKFjvjWiV9qGPj8bDMb_o5Owv4Y6CAPkRzPQAyqbdH/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
   </head>
-  <body></body>
+  <body>
+    <h1 class="store-name">Apex Gaming</h1>
+    <center>
+      <iframe class="leaderboard" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTEFovYGHVQo9JNMLeX6ToaHihOoDzzH4VZ_tDKFjvjWiV9qGPj8bDMb_o5Owv4Y6CAPkRzPQAyqbdH/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+    </center>
+  </body>
 </html>
