--- a/index.html
+++ b/index.html
@@ -1,24 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Apex Gaming</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <ul class="horizontal">
-      <li>
-        <a href="#">Home</a>
-      </li>
-      <li>
-        <a href="#">Leaderboard</a>
-      </li>
-    </ul>
-    <h1 class="store-name">Apex Gaming</h1>
-    <center>
-      <iframe class="leaderboard" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTEFovYGHVQo9JNMLeX6ToaHihOoDzzH4VZ_tDKFjvjWiV9qGPj8bDMb_o5Owv4Y6CAPkRzPQAyqbdH/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-    </center>
-    <p>
-      Top 8 players on the leaderboard will recieve a round 1 bye at the invitational
-    </p>
-  </body>
+  <head></head>
+  <body></body>
 </html>
