--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+  <head>
+    <title>Apex Gaming</title>
+  </head>
+  <body bgcolor="gray">
+    <img src="logo.png" alt="Apex Gaming Logo" height="100px">
+  </body>
 </html>
