--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <title>Apex Gaming</title>
   </head>
-  <body bgcolor="gray">
-    <img src="logo.png" alt="Apex Gaming Logo" height="100px">
+  <body bgcolor="yellow">
+    <a href="index.html"><img src="logo.png" alt="Apex Gaming Logo" height="100px"></a>
+    <nav>
+      <ul>Home</ul>
+      <ul>Store</ul>
+      <ul>Invitational</ul>
+      <ul>About Us</ul>
+    </nav>
   </body>
 </html>
