--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="styles.css">
     <title>Apex Gaming</title>
   </head>
-  <body bgcolor="yellow">
+  <body>
     <a href="index.html"><img src="logo.png" alt="Apex Gaming Logo" height="100px"></a>
-    <nav>
-      <ul>Home</ul>
-      <ul>Store</ul>
-      <ul>Invitational</ul>
-      <ul>About Us</ul>
-    </nav>
+    <div class="main-nav">
+      <a href="">Home</a>
+      <a href="">Store</a>
+      <a href="">Invitational</a>
+      <a href="">About Us</a>
+    </div>
   </body>
 </html>
