--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <title>Apex Gaming</title>
   </head>
   <body>
-    <a href="index.html"><img src="logo.png" alt="Apex Gaming Logo" height="100px"></a>
-    <div class="main-nav">
-      <a href="">Home</a>
-      <a href="">Store</a>
-      <a href="">Invitational</a>
-      <a href="">About Us</a>
+    <div class="nav-flex">
+      <div class="logo-flex">
+        <a href="index.html"><img src="logo.png" alt="Apex Gaming Logo" height="100px"></a>
+      </div>
+      <div class="menu-flex">
+        <a href="">Home</a>
+        <a href="">Store</a>
+        <a href="">Invitational</a>
+        <a href="">About Us</a>
+      </div>
     </div>
   </body>
 </html>
