--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       </div>
       <div class="menu-flex">
         <a href="">Home</a>
-        <a href="">Store</a>
+        <a target="_blank" href="https://www.apexgaming.gg">Store</a>
         <a href="">Invitational</a>
         <a href="">About Us</a>
       </div>
