--- a/index.html
+++ b/index.html
@@ -5,5 +5,16 @@
     <title>Apex Gaming</title>
   </head>
   <body>
+    <div class="main-header">
+      <div class="apex-logo">
+        <img src="logo.png" alt="">
+      </div>
+      <div class="main-nav-bar">
+        <a href="">Home</a>
+        <a href="">Invitational</a>
+        <a href="">Store</a>
+        <a href="">About Us</a>
+      </div>
+    </div>
   </body>
 </html>
