--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
       <div class="main-nav-bar">
         <a href="">Home</a>
         <a href="">Invitational</a>
-        <a href="">Store</a>
+        <a href="https://www.apexgaming.gg" target="_blank">Store</a>
         <a href="">About Us</a>
       </div>
     </div>
+    <iframe style="width: 850px; height: 850px;" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTEFovYGHVQo9JNMLeX6ToaHihOoDzzH4VZ_tDKFjvjWiV9qGPj8bDMb_o5Owv4Y6CAPkRzPQAyqbdH/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
   </body>
 </html>
