--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://kit.fontawesome.com/df3c52e12b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Apex Gaming</title>
   </head>
@@ -15,6 +16,7 @@
         <a href="https://www.apexgaming.gg" target="_blank">Store</a>
         <a href="">About Us</a>
       </div>
+      <i class="fa-brands fa-twitter"></i>
     </div>
   </body>
 </html>
