--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="https://www.apexgaming.gg" target="_blank">Store</a>
         <a href="">About Us</a>
       </div>
-      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-twitter fa-xl"></i>
     </div>
   </body>
 </html>
