--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
         <a href="https://www.apexgaming.gg" target="_blank">Store</a>
         <a href="">About Us</a>
       </div>
-      <i class="fa-brands fa-twitter fa-xl"></i>
+    </div>
+    <div class="bottom-icons">
+      <i class="fa-brands fa-twitter fa-xl fa-inverse" style="color:lightblue"></i>
+      <i class="fa-brands fa-discord fa-xl fa-inverse"></i>
+      <i class="fa-brands fa-youtube fa-xl fa-inverse"></i>
+      <i class="fa-brands fa-facebook fa-xl fa-inverse"></i>
+      <a href="https://www.twitter.com"><i class="fa-brands fa-twitch fa-xl fa-inverse"></i></a>
     </div>
   </body>
 </html>
