--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       </div>
     </div>
     <div class="bottom-icons">
-      <i class="fa-brands fa-twitter fa-xl fa-inverse" style="color:lightblue"></i>
-      <i class="fa-brands fa-discord fa-xl fa-inverse"></i>
-      <i class="fa-brands fa-youtube fa-xl fa-inverse"></i>
-      <i class="fa-brands fa-facebook fa-xl fa-inverse"></i>
-      <a href="https://www.twitter.com"><i class="fa-brands fa-twitch fa-xl fa-inverse"></i></a>
+      <a href="https://www.twitter.com"><i class="fa-brands fa-twitter fa-xl"></i></a>
+      <a href="https://www.facebook.com"><i class="fa-brands fa-facebook fa-xl"></i></a>
+      <a href="https://www.discord.com"><i class="fa-brands fa-discord fa-xl"></i></a>
+      <a href="https://www.youtube.com"><i class="fa-brands fa-youtube fa-xl"></i></a>
+      <a href="https://www.twitch.com/apexgaming"><i class="fa-brands fa-twitch fa-xl"></i></a>
     </div>
   </body>
 </html>
