--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="bottom-icons">
       <a href="https://www.twitter.com"><i class="fa-brands fa-twitter fa-xl"></i></a>
       <a href="https://www.facebook.com"><i class="fa-brands fa-facebook fa-xl"></i></a>
-      <a href="https://www.discord.com"><i class="fa-brands fa-discord fa-xl"></i></a>
+      <a href="https://www.discord.gg/FXFGN4D"><i class="fa-brands fa-discord fa-xl"></i></a>
       <a href="https://www.youtube.com"><i class="fa-brands fa-youtube fa-xl"></i></a>
       <a href="https://www.twitch.com/apexgaming"><i class="fa-brands fa-twitch fa-xl"></i></a>
     </div>
