--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       </div>
     </div>
       <div class="bottom-icons">
-        <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-xl"></i></a>
-        <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
+        <a href="https://www.twitter.com/apexgamingMTG" target="_blank"><i class="fa-brands fa-twitter fa-xl"></i></a>
+        <a href="https://www.facebook.com/apex.gaming.esports" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
         <a href="https://www.discord.gg/FXFGN4D" target="_blank"><i class="fa-brands fa-discord fa-xl"></i></a>
-        <a href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
+        <a href="https://www.youtube.com/@ApexGamingEsports" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
         <a href="https://www.twitch.com/apexgaming" target="_blank"><i class="fa-brands fa-twitch fa-xl"></i></a>
       </div>
   </body>
