--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="">Home</a>
         <a href="">Invitational</a>
         <a href="https://www.apexgaming.gg" target="_blank">Store</a>
+        <a href="">Social</a>
         <a href="">About Us</a>
       </div>
     </div>
