--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="">About Us</a>
       </div>
     </div>
+    <a class="twitter-timeline" data-theme="dark" data-chrome="nofooter" href="https://twitter.com/TedaBoymtg?ref_src=twsrc%5Etfw">Tweets by TedaBoy</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <div class="bottom-icons">
       <a href="https://www.twitter.com/apexgamingMTG" target="_blank"><i class="fa-brands fa-twitter fa-xl"></i></a>
       <a href="https://www.facebook.com/apex.gaming.esports" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
