--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="">About Us</a>
       </div>
     </div>
-    <iframe src="https://discord.com/widget?id=574389293318012928&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FNew_York&showTitle=0&showNav=1&showTabs=0&showPrint=0&mode=MONTH&showCalendars=0&src=Y180MzlmNjRhZmM0OWY1OTUwN2RlZDIwNDI0MmMxODk1OTc0MjMzOTdjYjkyZDZiNWYzMDA4NTBmMWQ2ZTNiYjFkQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=Y19jMzNmZjI2OWQzYjc2ZGY3YTY5NGJhZGUzZTE2ODMxMjgyYTA5ZDIyNGVjYzhhZTFlY2RmMjE4YWY3YmY0NmE2QGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23B39DDB&color=%23F6BF26" style="border:solid 1px #777" width="1200" height="600" frameborder="0" scrolling="no"></iframe>
     <div class="bottom-icons">
       <a href="https://www.twitter.com/apexgamingMTG" target="_blank"><i class="fa-brands fa-twitter fa-xl"></i></a>
       <a href="https://www.facebook.com/apex.gaming.esports" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
