--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="styles.css">
     <title>Apex Gaming</title>
+    <meta charset="utf-8">
   </head>
   <body>
   </body>
