--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <div class="main-flex-wrapper">
+      <div class="left-side">
+        <div>
+          <img class="main-logo" src="images/apexlogo.png" alt="Apex Gaming Logo">
+        </div>
+        <div>
+          <p>This will be the text underneath the logo</p>
+        </div>
+      </div>
+      <div class="right-side">
+        <p>This is text to show placement</p>
+      </div>
+    </div>
   </body>
 </html>
