--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
         <p>This is text to show placement</p>
       </div>
     </div>
+    <footer>This is the footer.</footer>
   </body>
 </html>
