--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <div class="main-flex-wrapper">
-      <div class="left-side">
-        <div>
-          <img class="main-logo" src="images/apexlogo.png" alt="Apex Gaming Logo">
-        </div>
-        <div>
-          <p>This will be the text underneath the logo</p>
-        </div>
+    <div>
+      <div>
+        <img src="images/apexlogo.png" alt="Apex Gaming logo">
       </div>
-      <div class="right-side">
-        <p>This is text to show placement</p>
+      <div>
+        <ul>
+          <li>Home</li>
+          <li>Store</li>
+        </ul>
       </div>
     </div>
-    <footer>This is the footer.</footer>
   </body>
 </html>
