--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <div>
-      <div>
-        <img src="images/apexlogo.png" alt="Apex Gaming logo">
+    <div class="main-flex">
+      <div class="left-flex">
+        <a class="apex-logo" href="index.html"><img src="images/apexlogo.png" alt="Apex Logo"></a>
+        <a href="index.html">Home</a>
+        <a href="https://www.apexgaming.gg/" target="_blank">Store</a>
       </div>
-      <div>
-        <ul>
-          <li>Home</li>
-          <li>Store</li>
-        </ul>
+      <div class="right-flex">
+        <img src="images/inviinfo.jpg" alt="Invitational Info">
+        <img src="images/invischedule.jpg" alt="Invitational Schedule">
       </div>
     </div>
   </body>
