--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <link rel="stylesheet" href="styles.css">
     <title>Apex Gaming</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
     <meta charset="utf-8">
   </head>
   <body>
     <div class="main-flex">
       <div class="left-flex">
-        <a class="apex-logo" href="index.html"><img src="images/apexlogo.png" alt="Apex Logo"></a>
-        <a href="index.html">Home</a>
-        <a href="https://www.apexgaming.gg/" target="_blank">Store</a>
+        <div>
+          <a class="apex-logo" href="index.html"><img src="images/apexlogo.png" alt="Apex Logo"></a>
+        </div>
+        <div>
+          <a href="index.html">Home</a>
+          <a href="https://www.apexgaming.gg/" target="_blank">Store</a>
+        </div>
       </div>
       <div class="right-flex">
-        <img src="images/inviinfo.jpg" alt="Invitational Info">
-        <img src="images/invischedule.jpg" alt="Invitational Schedule">
       </div>
     </div>
   </body>
