--- a/index.html
+++ b/index.html
@@ -3,24 +3,28 @@
   <head>
     <link rel="stylesheet" href="styles.css">
     <title>Apex Gaming</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
     <meta charset="utf-8">
   </head>
   <body>
-    <div class="main-flex">
-      <div class="left-flex">
-        <div>
-          <a class="apex-logo" href="index.html"><img src="images/apexlogo.png" alt="Apex Logo"></a>
-        </div>
-        <div>
-          <a href="index.html">Home</a>
-          <a href="https://www.apexgaming.gg/" target="_blank">Store</a>
-        </div>
-      </div>
-      <div class="right-flex">
-      </div>
-    </div>
+    <table>
+      <thead>
+        <th>Store</th>
+        <th>Location</th>
+        <th>Date</th>
+        <th>Time</th>
+        <th>Format</th>
+        <th>Type</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Taitan Game Shop</td>
+          <td>Coraopolis, PA</td>
+          <td>May 20</td>
+          <td>9:00 AM</td>
+          <td>Legacy</td>
+          <td>AIQ</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
