--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <ul>
+      <li><img src="images/apexlogo.png"></li>
+    </ul>
+    <h1>Apex Gaming Invitational Info</h1>
+    <p>This is test text.</p>
     <table>
       <thead>
         <th>Store</th>
