--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <nav class="main-nav">
     <ul>
-      <li><img src="images/apexlogo.png"></li>
+      <li><a href="index.html"><img src="images/apexlogo.png"></a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="https://www.apexgaming.gg" target="_blank">Store</a></li>
     </ul>
+    </nav>
     <h1>Apex Gaming Invitational Info</h1>
     <p>This is test text.</p>
     <table>
