--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <nav class="main-nav">
-    <ul>
-      <li><a href="index.html"><img src="images/apexlogo.png"></a></li>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="https://www.apexgaming.gg" target="_blank">Store</a></li>
-    </ul>
+    <nav class="nav-bar">
+      <a href="https://www.apexgaming.gg"><img src="images/apexlogo.png" alt="Apex Gaming logo"></a>
+      <ul class="nav-links">
+        <li>Home</li>
+        <li>Store</li>
+      </ul>
     </nav>
     <h1>Apex Gaming Invitational Info</h1>
     <p>This is test text.</p>
