--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>The Apex Gaming Invitational Series is a Magic: the Gathering series hosted
       by participating local game stores. The Invitational will be hosted at Apex Gaming
       on Nov 19<sup>th</sup>, 2023! You might be asking, "What are the details and how do
-      I qualify? Check out the info below:"
+      I qualify?" Check out the info below:
     </p>
     <h2>What is the Invitational</h2>
     <ul>
@@ -89,13 +89,12 @@
             <td>9:00 AM</td>
             <td>Legacy</td>
             <td>AIQ</td>
-            <td>Marshal Aruthers
-              TJ Rataiczak
-            </td>
+            <td>Marshal Aruthers</td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
+  <footer>This is where social links will go</footer>
   </body>
 </html>
