--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <td>9:00 AM</td>
             <td>Legacy</td>
             <td>AIQ</td>
-            <td>Marshal Aruthers</td>
+            <td>Test Name</td>
           </tr>
         </tbody>
       </table>
