--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Apex Gaming</title>
     <meta charset="utf-8">
+    <script src="https://kit.fontawesome.com/df3c52e12b.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <nav class="nav-bar">
@@ -95,6 +96,13 @@
       </table>
     </div>
   </div>
-  <footer>This is where social links will go</footer>
+  <footer>
+    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
+    <a href="https://www.twitter.com/" target="_blank"><i class="fa-brands fa-twitter fa-xl"></i></a>
+    <a href="https://www.discord.com/" target="_blank"><i class="fa-brands fa-discord fa-xl"></i></a>
+    <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
+    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
+    <a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok fa-xl"></i></a>
+  </footer>
   </body>
 </html>
