--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
     </div>
   </div>
   <footer>
-    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
-    <a href="https://www.twitter.com/" target="_blank"><i class="fa-brands fa-twitter fa-xl"></i></a>
-    <a href="https://www.discord.com/" target="_blank"><i class="fa-brands fa-discord fa-xl"></i></a>
-    <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
-    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
-    <a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok fa-xl"></i></a>
+    <a href="https://www.facebook.com/apex.gaming.esports" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
+    <a href="https://www.twitter.com/apexgamingMTG" target="_blank"><i class="fa-brands fa-twitter fa-xl"></i></a>
+    <a href="https://discord.gg/FXFGN4D" target="_blank"><i class="fa-brands fa-discord fa-xl"></i></a>
+    <a href="https://www.twitch.tv/apexgaming" target="_blank"><i class="fa-brands fa-twitch fa-xl"></i></a>
+    <a href="https://www.youtube.com/c/ApexGamingEsports" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
+    <a href="https://www.tiktok.com/@apex_gaming_esports" target="_blank"><i class="fa-brands fa-tiktok fa-xl"></i></a>
   </footer>
   </body>
 </html>
