--- a/index.html
+++ b/index.html
@@ -1,108 +1,133 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Apex Gaming</title>
-    <meta charset="utf-8">
-    <script src="https://kit.fontawesome.com/df3c52e12b.js" crossorigin="anonymous"></script>
+    <meta charset="utf-8" />
+    <script
+      src="https://kit.fontawesome.com/df3c52e12b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav class="nav-bar">
-      <a href="index.html"><img src="images/apexlogo.png" alt="Apex Gaming logo"></a>
+      <a href="index.html"
+        ><img src="images/apexlogo.png" alt="Apex Gaming logo"
+      /></a>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="https://www.apexgaming.gg" target="_blank">Store</a></li>
       </ul>
     </nav>
     <div class="main-wrapper">
-    <div class="left-flex">
-    <h1>Apex Gaming Invitational Info</h1>
-    <p>The Apex Gaming Invitational Series is a Magic: the Gathering series hosted
-      by participating local game stores. The Invitational will be hosted at Apex Gaming
-      on Nov 19<sup>th</sup>, 2023! You might be asking, "What are the details and how do
-      I qualify?" Check out the info below:
-    </p>
-    <h2>What is the Invitational</h2>
-    <ul>
-      <li>
-        Invite only, (zero entry fee) Modern MTG tournament.
-      </li>
-      <li>
-        Swiss tournament structure with a cute to top 8. Top 8 will be best of 3 with
-        the finals being best of 5. Higher sees will get choice of play/draw. Top 8
-        will be open decklist.
-      </li>
-      <li>
-        $20,000 in prizes!
-      </li>
-      <li>
-        Trophy will be awarded to the champion at the conclusion of the Invitational.
-      </li>
-    </ul>
-    <h2>
-      How do I qualify for the Invitational?
-    </h2>
-    <ul>
-      <li>
-        Play at any Apex Invitational Qualifier (AIQ) at any of the participating
-        stores to win qualifications to the Invitational in November.
-      </li>
-      <li>
-        The top 2 finishers will get an invite to the Invitational (if someone is
-        already qualified it will pass to the next highest non-qualified finisher of
-        that tournament).
-      </li>
-      <li>
-        There will be three last chance qualifiers (LCQs). One on Friday, Nov 17<sup>th</sup>
-        and two on Saturday, Nov 18<sup>th</sup>. Friday, Nov 17<sup>th</sup> will be
-        a Modern LCQ starting at 5pm. Saturday will be a Modern LCQ starting at 11am with a
-        Pioneer LCQ starting at 5pm. Each of these events will be 5 rounds of swiss awarding
-        a minimum of 4 spots each to the Invitational.
-      </li>
-      <li>
-        The Season 2 winner already recieved an invite to the Season 3 Invitational.
-        The Season 3 winner will be invited to the Season 4 Invitational.
-      </li>
-      <li>
-        Formats and payouts of the individual AIQs will be determined by the
-        hosting store.
-      </li>
-    </ul>
+      <div class="left-flex">
+        <div class="white-background">
+          <h1>Apex Gaming Invitational Info</h1>
+          <p>
+            The Apex Gaming Invitational Series is a Magic: the Gathering series
+            hosted by participating local game stores. The Invitational will be
+            hosted at Apex Gaming on Nov 19<sup>th</sup>, 2023! You might be
+            asking, "What are the details and how do I qualify?" Check out the
+            info below:
+          </p>
+        </div>
+        <div class="white-background">
+          <h2>What is the Invitational</h2>
+          <ul>
+            <li>Invite only, (zero entry fee) Modern MTG tournament.</li>
+            <li>
+              Swiss tournament structure with a cute to top 8. Top 8 will be
+              best of 3 with the finals being best of 5. Higher sees will get
+              choice of play/draw. Top 8 will be open decklist.
+            </li>
+            <li>$20,000 in prizes!</li>
+            <li>
+              Trophy will be awarded to the champion at the conclusion of the
+              Invitational.
+            </li>
+          </ul>
+        </div>
+        <div class="white-background">
+          <h2>How do I qualify for the Invitational?</h2>
+          <ul>
+            <li>
+              Play at any Apex Invitational Qualifier (AIQ) at any of the
+              participating stores to win qualifications to the Invitational in
+              November.
+            </li>
+            <li>
+              The top 2 finishers will get an invite to the Invitational (if
+              someone is already qualified it will pass to the next highest
+              non-qualified finisher of that tournament).
+            </li>
+            <li>
+              There will be three last chance qualifiers (LCQs). One on Friday,
+              Nov 17<sup>th</sup> and two on Saturday, Nov 18<sup>th</sup>.
+              Friday, Nov 17<sup>th</sup> will be a Modern LCQ starting at 5pm.
+              Saturday will be a Modern LCQ starting at 11am with a Pioneer LCQ
+              starting at 5pm. Each of these events will be 5 rounds of swiss
+              awarding a minimum of 4 spots each to the Invitational.
+            </li>
+            <li>
+              The Season 2 winner already recieved an invite to the Season 3
+              Invitational. The Season 3 winner will be invited to the Season 4
+              Invitational.
+            </li>
+            <li>
+              Formats and payouts of the individual AIQs will be determined by
+              the hosting store.
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="right-flex">
+        <div class="white-background">
+          <table>
+            <thead>
+              <tr>
+                <th>Store</th>
+                <th>Location</th>
+                <th>Date</th>
+                <th>Time</th>
+                <th>Format</th>
+                <th>Type</th>
+                <th>Qualified Players</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Taitan Game Shop</td>
+                <td>Corapolis, PA</td>
+                <td>May 20<sup>th</sup></td>
+                <td>9:00 AM</td>
+                <td>Legacy</td>
+                <td>AIQ</td>
+                <td>Test Name</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
-    <div class="right-flex">
-      <table>
-        <thead>
-          <tr>
-          <th>Store</th>
-          <th>Location</th>
-          <th>Date</th>
-          <th>Time</th>
-          <th>Format</th>
-          <th>Type</th>
-          <th>Qualified Players</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Taitan Game Shop</td>
-            <td>Corapolis, PA</td>
-            <td>May 20<sup>th</sup></td>
-            <td>9:00 AM</td>
-            <td>Legacy</td>
-            <td>AIQ</td>
-            <td>Test Name</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <footer>
-    <a href="https://www.facebook.com/apex.gaming.esports" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
-    <a href="https://www.twitter.com/apexgamingMTG" target="_blank"><i class="fa-brands fa-twitter fa-xl"></i></a>
-    <a href="https://discord.gg/FXFGN4D" target="_blank"><i class="fa-brands fa-discord fa-xl"></i></a>
-    <a href="https://www.twitch.tv/apexgaming" target="_blank"><i class="fa-brands fa-twitch fa-xl"></i></a>
-    <a href="https://www.youtube.com/c/ApexGamingEsports" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
-    <a href="https://www.tiktok.com/@apex_gaming_esports" target="_blank"><i class="fa-brands fa-tiktok fa-xl"></i></a>
-  </footer>
+    <footer>
+      <a href="https://www.facebook.com/apex.gaming.esports" target="_blank"
+        ><i class="fa-brands fa-facebook fa-xl"></i
+      ></a>
+      <a href="https://www.twitter.com/apexgamingMTG" target="_blank"
+        ><i class="fa-brands fa-twitter fa-xl"></i
+      ></a>
+      <a href="https://discord.gg/FXFGN4D" target="_blank"
+        ><i class="fa-brands fa-discord fa-xl"></i
+      ></a>
+      <a href="https://www.twitch.tv/apexgaming" target="_blank"
+        ><i class="fa-brands fa-twitch fa-xl"></i
+      ></a>
+      <a href="https://www.youtube.com/c/ApexGamingEsports" target="_blank"
+        ><i class="fa-brands fa-youtube fa-xl"></i
+      ></a>
+      <a href="https://www.tiktok.com/@apex_gaming_esports" target="_blank"
+        ><i class="fa-brands fa-tiktok fa-xl"></i
+      ></a>
+    </footer>
   </body>
 </html>
