--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </p>
         </div>
         <div class="white-background">
-          <h2>What is the Invitational</h2>
+          <h2>What is the Invitational?</h2>
           <ul>
             <li>Invite only, (zero entry fee) Modern MTG tournament.</li>
             <li>
@@ -81,31 +81,214 @@
         </div>
       </div>
       <div class="right-flex">
-        <div class="white-background">
-          <table>
-            <thead>
-              <tr>
-                <th>Store</th>
-                <th>Location</th>
-                <th>Date</th>
-                <th>Time</th>
-                <th>Format</th>
-                <th>Type</th>
-                <th>Qualified Players</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Taitan Game Shop</td>
-                <td>Corapolis, PA</td>
-                <td>May 20<sup>th</sup></td>
-                <td>9:00 AM</td>
-                <td>Legacy</td>
-                <td>AIQ</td>
-                <td>Test Name</td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="schedule white-background">
+          <div class="schedule-header">Store</div>
+          <div class="schedule-header">Location</div>
+          <div class="schedule-header">Date</div>
+          <div class="schedule-header">Time</div>
+          <div class="schedule-header">Format</div>
+          <div class="schedule-header">Type</div>
+          <div class="schedule-header">Qualified Players</div>
+          <!--Row divider-->
+          <div class="schedule-content">Taitan Game Shop</div>
+          <div class="schedule-content">Coraopolis, PA</div>
+          <div class="schedule-content">May 20</div>
+          <div class="schedule-content">9:00 AM</div>
+          <div class="schedule-content">Legacy</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">Jesse Campbell<br>Marshall Arthurs</div>
+          <!--Row divider-->
+          <div class="schedule-content">The Board Room</div>
+          <div class="schedule-content">Hurricane, WV</div>
+          <div class="schedule-content">June 3</div>
+          <div class="schedule-content">12:00 PM</div>
+          <div class="schedule-content">Pioneer</div>
+          <div class="schedule-content">AIQ/RCQ</div>
+          <div class="schedule-content">Missing</div>
+          <!--Row divider-->
+          <div class="schedule-content">The Goblin Traders</div>
+          <div class="schedule-content">Ironton, OH</div>
+          <div class="schedule-content">June 10</div>
+          <div class="schedule-content">1:00 PM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">Conner Roth<br>Dave Lovins</div>
+          <!--Row divider-->
+          <div class="schedule-content">Apex Gaming</div>
+          <div class="schedule-content">Caldwell, OH</div>
+          <div class="schedule-content">June 17</div>
+          <div class="schedule-content">11:00 AM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ/RCQ</div>
+          <div class="schedule-content"></div>
+          <!--Row divider-->
+          <div class="schedule-content">Apex Gaming</div>
+          <div class="schedule-content">Caldwell, OH</div>
+          <div class="schedule-content">June 18</div>
+          <div class="schedule-content">11:00 AM</div>
+          <div class="schedule-content">Pioneer</div>
+          <div class="schedule-content">AIQ/RCQ</div>
+          <div class="schedule-content"></div>
+          <!--Row divider-->
+          <div class="schedule-content">Swords & Boards</div>
+          <div class="schedule-content">Radcliff, KY</div>
+          <div class="schedule-content">June 18</div>
+          <div class="schedule-content">12:00 PM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">Eddie Vaughan<br>Jacob Claxton</div>
+          <!--Row divider-->
+          <div class="schedule-content">Castle Games</div>
+          <div class="schedule-content">Columbus, IN</div>
+          <div class="schedule-content">June 24</div>
+          <div class="schedule-content">1:00 PM</div>
+          <div class="schedule-content">Commander</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">Joe Graw<br>Dave Graw</div>
+          <!--Row divider-->
+          <div class="schedule-content">The Warp Gate</div>
+          <div class="schedule-content">Westerville, OH</div>
+          <div class="schedule-content">July 1</div>
+          <div class="schedule-content">11:00 AM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content"></div>
+          <!--Row divider-->
+          <div class="schedule-content">Castle Games</div>
+          <div class="schedule-content">Columbus, IN</div>
+          <div class="schedule-content">July 22</div>
+          <div class="schedule-content">1:00 PM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">David Koon<br>Ryan Miller</div>
+          <!--Row divider-->
+          <div class="schedule-content">Taitan Game Shop</div>
+          <div class="schedule-content">Coraopolis, PA</div>
+          <div class="schedule-content">July 22</div>
+          <div class="schedule-content">11:00 AM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">Kellan Drogowski<br>Kevin Fieber</div>
+          <!--Row divider-->
+          <div class="schedule-content">Castle Games @ GenCon</div>
+          <div class="schedule-content">Columbus, IN</div>
+          <div class="schedule-content">August 6</div>
+          <div class="schedule-content">11:00 AM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">Apex Gaming</div>
+          <div class="schedule-content">Caldwell, OH</div>
+          <div class="schedule-content">August 12</div>
+          <div class="schedule-content">11:00 AM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ/RCQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">Apex Gaming</div>
+          <div class="schedule-content">Caldwell, OH</div>
+          <div class="schedule-content">August 13</div>
+          <div class="schedule-content">11:00 AM</div>
+          <div class="schedule-content">Pioneer</div>
+          <div class="schedule-content">AIQ/RCQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">Adventure Gaming</div>
+          <div class="schedule-content">Zanesville, OH</div>
+          <div class="schedule-content">August 19</div>
+          <div class="schedule-content">11:00 AM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">Apex Gaming</div>
+          <div class="schedule-content">Caldwell, OH</div>
+          <div class="schedule-content">September 9</div>
+          <div class="schedule-content">11:00 AM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">Apex Gaming</div>
+          <div class="schedule-content">Caldwell, OH</div>
+          <div class="schedule-content">September 10</div>
+          <div class="schedule-content">11:00 AM</div>
+          <div class="schedule-content">Pioneer</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">Total Gaming Experience</div>
+          <div class="schedule-content">Chillicothe, OH</div>
+          <div class="schedule-content">September 17</div>
+          <div class="schedule-content">12:00 PM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">The Board Room</div>
+          <div class="schedule-content">Hurricane, WV</div>
+          <div class="schedule-content">October 14</div>
+          <div class="schedule-content">12:00 PM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">Swords & Boards</div>
+          <div class="schedule-content">Radcliff, KY</div>
+          <div class="schedule-content">October 15</div>
+          <div class="schedule-content">12:00 PM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">Apex Gaming</div>
+          <div class="schedule-content">Caldwell, OH</div>
+          <div class="schedule-content">October 28</div>
+          <div class="schedule-content">11:00 AM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">Apex Gaming</div>
+          <div class="schedule-content">Caldwell, OH</div>
+          <div class="schedule-content">October 29</div>
+          <div class="schedule-content">11:00 AM</div>
+          <div class="schedule-content">Pioneer</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">Total Gaming Experience</div>
+          <div class="schedule-content">Chillicothe, OH</div>
+          <div class="schedule-content">November 5</div>
+          <div class="schedule-content">12:00 PM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">AIQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">Apex Gaming</div>
+          <div class="schedule-content">Caldwell, OH</div>
+          <div class="schedule-content">November 17</div>
+          <div class="schedule-content">5:00 PM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">LCQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">Apex Gaming</div>
+          <div class="schedule-content">Caldwell, OH</div>
+          <div class="schedule-content">November 18</div>
+          <div class="schedule-content">11:00 AM</div>
+          <div class="schedule-content">Modern</div>
+          <div class="schedule-content">LCQ</div>
+          <div class="schedule-content">TBD</div>
+          <!--Row divider-->
+          <div class="schedule-content">Apex Gaming</div>
+          <div class="schedule-content">Caldwell, OH</div>
+          <div class="schedule-content">November 18</div>
+          <div class="schedule-content">5:00 PM</div>
+          <div class="schedule-content">Pioneer</div>
+          <div class="schedule-content">LCQ</div>
+          <div class="schedule-content">TBD</div>
         </div>
       </div>
     </div>
