--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     </nav>
     <div class="main-wrapper">
       <div class="left-flex">
-        <div class="white-background">
           <h1>Apex Gaming Invitational Info</h1>
           <p>
             The Apex Gaming Invitational Series is a Magic: the Gathering series
@@ -30,13 +29,11 @@
             asking, "What are the details and how do I qualify?" Check out the
             info below:
           </p>
-        </div>
-        <div class="white-background">
           <h2>What is the Invitational?</h2>
           <ul>
             <li>Invite only, (zero entry fee) Modern MTG tournament.</li>
             <li>
-              Swiss tournament structure with a cute to top 8. Top 8 will be
+              Swiss tournament structure with a cut to top 8. Top 8 will be
               best of 3 with the finals being best of 5. Higher sees will get
               choice of play/draw. Top 8 will be open decklist.
             </li>
@@ -46,8 +43,6 @@
               Invitational.
             </li>
           </ul>
-        </div>
-        <div class="white-background">
           <h2>How do I qualify for the Invitational?</h2>
           <ul>
             <li>
@@ -78,7 +73,6 @@
               the hosting store.
             </li>
           </ul>
-        </div>
       </div>
       <div class="right-flex">
         <div class="schedule white-background">
