--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       src="https://kit.fontawesome.com/df3c52e12b.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav class="nav-bar">
