--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="schedule-header">Time</div>
           <div class="schedule-header">Format</div>
           <div class="schedule-header">Type</div>
-          <div class="schedule-header">Qualified Players</div>
+          <div class="schedule-header">Qualified</div>
           <!--Row divider-->
           <div class="schedule-content">Taitan Game Shop</div>
           <div class="schedule-content">Coraopolis, PA</div>
@@ -291,22 +291,22 @@
     </div>
     <footer>
       <a href="https://www.facebook.com/apex.gaming.esports" target="_blank"
-        ><i class="fa-brands fa-facebook fa-xl"></i
+        ><i class="fa-brands fa-facebook fa-2xl"></i
       ></a>
       <a href="https://www.twitter.com/apexgamingMTG" target="_blank"
-        ><i class="fa-brands fa-twitter fa-xl"></i
+        ><i class="fa-brands fa-twitter fa-2xl"></i
       ></a>
       <a href="https://discord.gg/FXFGN4D" target="_blank"
-        ><i class="fa-brands fa-discord fa-xl"></i
+        ><i class="fa-brands fa-discord fa-2xl"></i
       ></a>
       <a href="https://www.twitch.tv/apexgaming" target="_blank"
-        ><i class="fa-brands fa-twitch fa-xl"></i
+        ><i class="fa-brands fa-twitch fa-2xl"></i
       ></a>
       <a href="https://www.youtube.com/c/ApexGamingEsports" target="_blank"
-        ><i class="fa-brands fa-youtube fa-xl"></i
+        ><i class="fa-brands fa-youtube fa-2xl"></i
       ></a>
       <a href="https://www.tiktok.com/@apex_gaming_esports" target="_blank"
-        ><i class="fa-brands fa-tiktok fa-xl"></i
+        ><i class="fa-brands fa-tiktok fa-2xl"></i
       ></a>
     </footer>
   </body>
