--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <div class="wrapper">
       <div class="left-wrapper">
-        <h1>Apex Gaming Invitational Info</h1>
+        <h1>Apex Gaming Invitational</h1>
         <p>
           The Apex Gaming Invitational Series is a Magic: the Gathering series
           hosted by participating local game stores. The Invitational will be
