--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/main.css " />
+    <link rel="stylesheet" href="css/home.css " />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Apex Gaming</title>
     <meta charset="utf-8" />
@@ -23,6 +24,7 @@
       /></a>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
+        <li><a href="decks.html">Decks</a></li>
         <li><a href="https://www.apexgaming.gg" target="_blank">Store</a></li>
       </ul>
     </nav>
@@ -291,5 +293,25 @@
         <div class="schedule-content">TBD</div>
       </div>
     </div>
+    <footer>
+      <a href="https://www.facebook.com/apex.gaming.esports" target="_blank"
+        ><i class="fa-brands fa-facebook fa-xl"></i
+      ></a>
+      <a href="https://www.twitter.com/apexgamingMTG" target="_blank"
+        ><i class="fa-brands fa-twitter fa-xl"></i
+      ></a>
+      <a href="https://discord.gg/FXFGN4D" target="_blank"
+        ><i class="fa-brands fa-discord fa-xl"></i
+      ></a>
+      <a href="https://www.twitch.tv/apexgaming" target="_blank"
+        ><i class="fa-brands fa-twitch fa-xl"></i
+      ></a>
+      <a href="https://www.youtube.com/c/ApexGamingEsports" target="_blank"
+        ><i class="fa-brands fa-youtube fa-xl"></i
+      ></a>
+      <a href="https://www.tiktok.com/@apex_gaming_esports" target="_blank"
+        ><i class="fa-brands fa-tiktok fa-xl"></i
+      ></a>
+    </footer>
   </body>
 </html>
